# fences

./: .gitignore  README.md  pyproject.toml
fences/: dedupe.ipynb  dedupe.py  load.ipynb  load.py
fences/clean/: clean.py
fences/dedupe/: dedupe.py
fences/extract_features/: encode_cyclical.ipynb  extract_features.py
fences/load/: load.ipynb  load.py
fences/model/: model.py
