[tool.poetry]
name = "fences"
version = "0.1.0"
description = ""
authors = ["pt-estimate <christopherwright@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
metaflow = "^2.11.9"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
