[tool.poetry]
name = "fences"
version = "0.1.0"
description = ""
authors = ["pt-estimate <christopherwright@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
metaflow = "^2.11.9"
pandas = "^2.2.2"
notebook = "^7.1.2"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
category-encoders = "^2.6.3"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
